# gitpatcher

./: .gitignore  Cargo.toml  README.md  build.rs  dist.sh  lefthook.yml  rustfmt.toml
src/: apply_patches.rs  format_patches.rs  lib.rs  regenerate_patches.rs  utils.rs
src/apply_patches/: bulk.rs  email.rs
src/format_patches/: format.rs  mod.rs
src/regenerate_patches/: patch_file.rs
tests/: bad_line_numbers.rs
tests/data/: approx_pi.rs  approx_pi.rs.patch
