[package]
name = "gitpatcher"
version = "0.1.1"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"
description = """A library that uses git to maintain a set of patches around a submodule"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/Techcable/gitpatcher"

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10"
bstr = "1.5"
time = { version = "0.3", features = ["macros", "parsing"] }
slog.workspace = true
git2.workspace = true

[dependencies.regex]
version = "^1"
# Reduce size (at the expense of performance)
# Right now we disable 'perf' and 'unicode'
default-features = false
features = ["std"]


[workspace]
members = ["bin"]

[workspace.dependencies]
slog = "2.7"

[workspace.dependencies.git2]
version = "0.17"
# We don't need https
default-features = false

[profile.release]
# Counterintuitively, this produces smaller binaries
opt-level = 3
# Use (thin) link time optimization to enable more optimization opportunities
# Note: Unlike regular LTO, thin LTO actually doesn't ruin compile times
lto = "thin"
# Panics are only used for internal errors.
# If we want to recover, we use a Result.
# As far as we're concerned a panic is fatal,
# and should exit the command line app.
panic = "abort"
